# ovidius-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml
.claude/commands/: tax-qa.md
.github/workflows/: ci.yml
app/: cache.py  config.py  db.py  storage.py  telemetry.py
app/agent/: prompts.py  routes.py  session.py  tools.py
app/api/: doc_routes.py  eval_routes.py  routes.py
app/copilot/: adapter.py
app/generation/: answerer.py
app/ingestion/: chunker.py  contextualizer.py  crawler.py  dedup.py  document_classifier.py  embedder.py  job_queue.py  worker.py  worker_service.py
app/mcp_server/: server.py
app/middleware/: query_logger.py
app/retrieval/: classifier.py  context_builder.py  corrective.py  hybrid_search.py  reranker.py  vector_store.py
app/ws/: routes.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
docs/: API_SPEC.md  ARCHITECTURE.md  ENGINEERING_LOG.md  PRD.md
eval/: dataset.json  runner.py
migrations/: 001_init.sql  002_observability.sql  003_ingestion_queue.sql  004_source_ingest_state.sql
scripts/: demo.py  ingest.py  ingest_worker.py  migrate.py
static/: index.html
static/assets/: index-1xHRMWu8.css  index-2EKgo9fW.css  index-BHOFNFIi.js  index-BPKu3wqW.css  index-BmrORWMc.js  index-C2m4I8Wj.css  index-CBbWllPs.js  index-CEioJ8g5.js  index-CXAw1_9E.js  index-ChO3s-2d.js  index-Ck2LVftT.js  index-D75K8ZGB.css  index-D7H0yj2G.js  index-DMaIvpDp.js  index-DR2DVaAX.css  (+7 more)
tests/: conftest.py
(+30 files in other folders)
