[project]
name = "ovidius-doc-qa"
version = "0.1.0"
description = "Advanced documentation QA agent with adaptive retrieval pipeline and multi-surface delivery"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "tiktoken>=0.9.0",
    "voyageai>=0.3.0",
    "flashrank>=0.2.0",
    "ragas>=0.4.0",
    "numpy>=1.26.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "websockets>=14.0",
    "boto3>=1.35.0",
    "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
